[tool.poetry]
name = "crawler-tt"
version = "0.1.0"
description = "A SQL injection crawler written for the AppCheck tech test"
authors = ["Thomas Morledge"]

[tool.poetry.scripts]
crawler = 'crawler_tt.main:cli'

[tool.black]
skip-string-normalization = true
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.8"
coloredlogs = "^15.0"
requests = "^2.25.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
mypy = "^0.812"
flake8 = "^3.9.2"
black = "^21.5b1"
bandit = "^1.7.0"
flake8-isort = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
